Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9654

fix problem of Remove Archive on Last Unlink policy

XMLWordPrintable

    • 3
    • 9223372036854775807

      mdt_handle_last_unlink() calls mdt_attr_get_complex() to get invalid attributes. However, mdt_attr_get_complex() clearups all known attributes. So, the known attribute of HSM or nlink should be checked before calling that function.

            lixi Li Xi (Inactive)
            lixi Li Xi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: